# ToH-CTF-2025-Challenges

./: README.md
crypto/crypto-drunken-sailor/: README.md  solve.sage  writeup.md
crypto/crypto-osaka/: README.md  flag.txt
crypto/crypto-rsa-recycle/: README.md  x.py
infra/: README.md
misc/misc-intended-behaviour/: Dockerfile  README.md  docker-compose.yml
misc/misc-look-at-the-time/: README.md  flag
misc/misc-the-silent-killer/: Cargo.toml  Dockerfile  README.md  dbfile.json  docker-compose.yaml
misc/misc-unintended_behaviour/: Dockerfile  README.md  docker-compose.yml  requirements.txt
pwn/pwn-cac/: README.md
pwn/pwn-forsaken-tower/: README.md  attribution.txt  flag
pwn/pwn-free-provola/: README.md
pwn/pwn-krwx/: README.md
pwn/pwn-milk-processor/: README.md
pwn/pwn-v9/: README.md  description.md
rev/rev-big-embedded-system/: README.md
rev/rev-hardware-assisted-pdf/: README.md  writeup.md
rev/rev-pickle-funny/: exploit.py
web/web-rusty-rest-shop/solution/: Cargo.toml  README.md
web/web-rusty-rest-shop/solution/src/: main.rs
web/web-rusty-rest-shop/src/: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  docker-compose.yml
web/web-rusty-rest-shop/src/frontend/: Dockerfile  package.json
web/web-rusty-rest-shop/src/frontend/src/routes/: +error.svelte  +layout.server.js
web/web-rusty-rest-shop/src/frontend/src/routes/home/: +layout.js  +page.js  +page.svelte
web/web-rusty-rest-shop/src/frontend/src/routes/login/: +page.svelte
web/web-rusty-rest-shop/src/src/: db.rs  main.rs  requests.rs  responses.rs
(+116 files in other folders)
