[package]
name = "web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
eyre = "0.6.12"
rand = "0.9.1"
ring = "0.17.14"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"]}
tokio = { version = "1.45.1", features = ["full"] }
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
